docs/versioned_docs/version-1.2.5/reference/blocks.mdx
<!-- Generated by port_legacy_docs.py v2 from v1.2.5 (d226d745169891f79b1a767ebbc64dc51143d178). Historical snapshot—do not edit directly. -->

<a id="blocks"></a>
# Blocks

**Blocks** are the top-level visual building units of a Slack message. A `Message` is a list of blocks, rendered top-to-bottom in Slack.

For a side-by-side gallery of every block type with code, JSON, and Slack screenshots, see [Using Blocks](/v1.2.5/usage/using_blocks).

For the elements that go *inside* blocks (buttons, menus, date pickers, etc.) see [Elements](/v1.2.5/reference/elements).

Slack reference: [https://api.slack.com/reference/block-kit/blocks](https://api.slack.com/reference/block-kit/blocks)

### ActionsBlock {#blocks.ActionsBlock}

**Class**

```python
ActionsBlock(elements: Optional[List[Element]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `Block` that is used to hold interactive elements (normally for users to interface with).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Optional[List[Element]]` | a list of [Elements](/v1.2.5/reference/elements)<br />(up to a maximum of 25). |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` are invalid. |

</div>

### ContextBlock {#blocks.ContextBlock}

**Class**

```python
ContextBlock(elements: Optional[List[Union[Element, CompositionObject]]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `ContextBlock` displays contextul message info, including both images and text.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Optional[List[Union[Element, CompositionObject]]]` | a list of `Text` objects and `Image` elements. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `elements` are not `Text` or `Image` or exceed 10 items. |

</div>

### DividerBlock {#blocks.DividerBlock}

**Class**

```python
DividerBlock(block_id: Optional[str] = None)
```

<div className="api-docstring">

A content divider, like an `&lt;hr&gt;` in HTML, to split up different blocks inside of
a message.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

</div>

### FileBlock {#blocks.FileBlock}

**Class**

```python
FileBlock(external_id: str, block_id: Optional[str], source: str = 'remote')
```

<div className="api-docstring">

Displays a remote file (e.g. a PDF).

For details on how remote files are exposed to Slack, see
[https://api.slack.com/messaging/files#adding](https://api.slack.com/messaging/files#adding).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `external_id` | `str` | the ID assigned to the remote file when it was added to Slack. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `source` | `str` | always "remote" as per the Slack API (may change in the future). |

</div>

### HeaderBlock {#blocks.HeaderBlock}

**Class**

```python
HeaderBlock(text: Union[str, Text], block_id: Optional[str] = None)
```

<div className="api-docstring">

A Header Block is a plain-text block that displays in a larger, bold font.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Union[str, Text]` | the text that will be rendered as a heading. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

</div>

### ImageBlock {#blocks.ImageBlock}

**Class**

```python
ImageBlock(image_url: str, alt_text: Optional[str] = ' ', title: Optional[Union[Text, str]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

An Image Block contains a single graphic, accessed by URL.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `image_url` | `str` | the URL pointing to the image file you want to display. |
| `alt_text` | `Optional[str]` | alternative text for accessibility purposes and when the image fails to load. |
| `title` | `Optional[Union[Text, str]]` | an optional text title to be presented with the image. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when one or more of the provided args fails validation. |

</div>

### InputBlock {#blocks.InputBlock}

**Class**

```python
InputBlock(label: TextLike, element: Element, dispatch_action: bool = False, block_id: Optional[str] = None, hint: Optional[TextLike] = None, optional: bool = False)
```

<div className="api-docstring">

A block that collects information from users - it can hold a plain-text
input element, a checkbox element, a radio button element, a select
menu element, a multi-select menu element, or a datepicker.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | the name which identifies the input field. |
| `element` | `Element` | an interactive [Element](/v1.2.5/reference/elements)<br />(e.g. a text field). |
| `dispatch_action` | `bool` | whether the [Element](/v1.2.5/reference/elements)<br />should trigger the sending of a `block_actions` payload. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `hint` | `Optional[TextLike]` | an optional additional guide on what input the user should prodive. |
| `optional` | `bool` | whether this input field may be empty when the user submits e.g. the modal. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>

### RichTextBlock {#blocks.RichTextBlock}

**Class**

```python
RichTextBlock(elements: Union[RichTextObject, List[RichTextObject]], block_id: Optional[str] = None)
```

<div className="api-docstring">

A RichTextBlock is used to provide easier rich text formatting
    than standard markdown text (e.g. in a
    [`SectionBlock`](/v1.2.5/reference/blocks/#blocks.SectionBlock))
    and access to text formatting features not available in traditional
    markdown (e.g. strikethrough). See the various rich text elements
    you can include [here](/v1.2.5/reference/rich_text).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `Union[RichTextObject, List[RichTextObject]]` | a single [rich text element](/v1.2.5/reference/rich_text)<br />or a list of those elements. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the elements in `elements` are not valid rich<br />text elements. |

</div>

### SectionBlock {#blocks.SectionBlock}

**Class**

```python
SectionBlock(text: Optional[TextLike] = None, block_id: Optional[str] = None, fields: Optional[Union[TextLike, List[TextLike]]] = None, accessory: Optional[Element] = None)
```

<div className="api-docstring">

A section is one of the most flexible blocks available -
it can be used as a simple text block, or with any of the
available block elements.

Section blocks can also optionally be given an "accessory,"
which is typically one of the interactive
[Elements](/v1.2.5/reference/elements).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Optional[TextLike]` | text to include in the block. Can be a string or `Text` object (of either<br />`mrkdwn` or `plaintext` variety). Defaults to markdown if unspecified. One of either<br />`text` or `fields` must be provided. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |
| `fields` | `Optional[Union[TextLike, List[TextLike]]]` | a list of text objects. One of either `text` or `fields` must be provided. |
| `accessory` | `Optional[Element]` | an optional [Element](/v1.2.5/reference/elements) object<br />that will take a secondary place in the block (after or to the side of  `text`<br />or `fields`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation checks. |

</div>

### TableBlock {#blocks.TableBlock}

**Class**

```python
TableBlock(rows: List[List[Union[RawText, RichTextObject]]], column_settings: Optional[List[ColumnSettings]] = None, block_id: Optional[str] = None)
```

<div className="api-docstring">

A `TableBlock` displays data in a table format.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `rows` | `List[List[Union[RawText, RichTextObject]]]` | a list of lists of `RawText` or `RichTextObject` objects. |
| `column_settings` | `Optional[List[ColumnSettings]]` | a list of `ColumnSettings` objects. |
| `block_id` | `Optional[str]` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `rows` are not `RawText` or `RichTextObject` objects. |
| `InvalidUsageError` | when the number of column_settings does not match the number of<br />columns in each row. |
| `InvalidUsageError` | when the number of rows is greater than 100. |
| `InvalidUsageError` | when the number of columns in a row is greater than 20. |
| `InvalidUsageError` | when the number of column_settings is greater than 20. |

</div>

#### _resolve_cell {#blocks.TableBlock._resolve_cell}

```python
_resolve_cell(cell: Union[RawText, RichTextObject]) -> Dict[str, Any]
```

Resolve a table cell to its JSON representation.

RawText cells are resolved directly.
RichTextObject cells are wrapped in a rich_text structure.
